# FiveCChessEngine

./: CMakeLists.txt  helloworld.cpp
src/: bitboard.cpp  bitboard.h  board.cpp  board.h  debugutils.cpp  debugutils.h  main.cpp  move.h  movegenerator.h  pieces.cpp  pieces.h  position.h  types.h  vec4.cpp  vec4.h
tests/: boardtestmain.cpp  movegentests.cpp
